tests/functional/repl_characterization/data/stacktrace_invalid_arg.test
@args --debugger
  nix-repl> throw "(forever?????????)"
  error: (forever?????????)

argument-less :st works fine
  nix-repl> :st

  0: error: (forever?????????)
  «string»:1:1

       1| throw "(forever?????????)"
        | ^

  Env level 0
  static:

  Env level 1
  abort baseNameOf break builtins derivation derivationStrict dirOf false fetchGit fetchMercurial fetchTarball fetchTree fromTOML import isNull map null placeholder removeAttrs scopedImport throw toString true

a non-numeric strings produces an error
  nix-repl> :st chat
  error: argument 'chat' is not a valid integer

  nix-repl> :st bedroom community
  error: argument 'bedroom community' is not a valid integer

...even when they start with a digit
  nix-repl> :st 6up
  error: argument '6up' is not a valid integer

...or when they're floats
  nix-repl> :st 4.50
  error: argument '4.50' is not a valid integer

an integer outside the range produces an error
  nix-repl> :st 23571113171923
  error: argument '23571113171923' is not a valid integer

argument-less :st is still at the same index after errors
  nix-repl> :st 1

  1: while calling a function
  «string»:1:1

       1| throw "(forever?????????)"
        | ^

  Env level 0
  static:

  Env level 1
  abort baseNameOf break builtins derivation derivationStrict dirOf false fetchGit fetchMercurial fetchTarball fetchTree fromTOML import isNull map null placeholder removeAttrs scopedImport throw toString true

  nix-repl> :st foo
  error: argument 'foo' is not a valid integer

  nix-repl> :st

  1: while calling a function
  «string»:1:1

       1| throw "(forever?????????)"
        | ^

  Env level 0
  static:

  Env level 1
  abort baseNameOf break builtins derivation derivationStrict dirOf false fetchGit fetchMercurial fetchTarball fetchTree fromTOML import isNull map null placeholder removeAttrs scopedImport throw toString true

quit
  nix-repl> :quit
  error: (forever?????????)
